syntax = "proto3";

option go_package = "./pb";

package pb;

//获取验证码
message GetCaptchaByEmailReq {
    string email = 1;
}

message GetCaptchaByEmailResp {
    int32 result = 1;
}

//验证验证码
message VerifyCaptchaReq {
    string email = 1;
    string captcha = 2;
}

message VerifyCaptchaResp {
    int32 result = 1;
}

service CaptchaService {
    rpc GetCaptchaByEmail(GetCaptchaByEmailReq) returns (GetCaptchaByEmailResp);
    rpc VerifyCaptcha(VerifyCaptchaReq) returns (VerifyCaptchaResp);
}